# ChangeLog for dev-ruby/ruby-password
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-password/ChangeLog,v 1.6 2009/08/13 06:23:45 graaff Exp $

  13 Aug 2009; Hans de Graaff <graaff@gentoo.org>
  -ruby-password-0.5.2.ebuild:
  Remove old version.

*ruby-password-0.5.3 (18 Jun 2009)

  18 Jun 2009; Hans de Graaff <graaff@gentoo.org>
  +ruby-password-0.5.3.ebuild:
  Version bump with minor build system fixes.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  03 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Fix metadata maintainer, thanks to Kevin F. Quinn in bug #146100.

  05 Jan 2006; Petteri Räty <betelgeuse@gentoo.org>
  ruby-password-0.5.2.ebuild:
  Added ~x86 keyword for bug #117891.

*ruby-password-0.5.2 (19 Aug 2005)

  19 Aug 2005; Rob Holland <tigger@gentoo.org> +metadata.xml,
  +ruby-password-0.5.2.ebuild:
  Initial version.
